# textual-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  chonkie_chunking_plan.md  justfile  pyproject.toml  textual_docs_search_architecture.md  todo_app.py  todo_app.tcss
config/: textual-mcp.yaml
docs/: chonkie_setup.md
scripts/: __init__.py  index_documentation.py  init_embeddings.py
src/textual_mcp/: __init__.py  __main__.py  config.py  server.py
src/textual_mcp/generators/: __init__.py  widget_generator.py
src/textual_mcp/search/: __init__.py  chonkie_processor.py  document_processor.py  memory.py  model_manager.py
src/textual_mcp/tools/: __init__.py  analysis_tools.py  documentation_tools.py  layout_tools.py  validation_tools.py  widget_tools.py
src/textual_mcp/utils/: __init__.py  cache.py  errors.py  logging_config.py  style_introspector.py
src/textual_mcp/validators/: __init__.py  conflict_detector.py  inline_validator.py  property_validator.py  selector_validator.py  tcss_validator.py
stubs/vectordb/: __init__.pyi  chunking.pyi  embedding.pyi  memory.pyi  storage.pyi  vector_search.pyi
tests/: conftest.py  test_chonkie_processor.py  test_search.py
tests/unit/: test_analysis_tools.py  test_analysis_tools_conflict_detection.py  test_cache.py  test_config.py  test_mcp_integration.py  test_server.py  test_validation_tools.py  test_widget_tools.py
tests/unit/test_generators/: test_widget_generator.py
tests/unit/test_validators/: __init__.py  test_conflict_detector.py  test_inline_validator.py  test_selector_validator.py  test_tcss_validator.py
typings/mistletoe/: __init__.pyi  block_token.pyi
