[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Textual TUI framework with vector search"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Kevin Goff", email = "kevinpgoff98@gmail.com" }
]
dependencies = [
    "aiofiles>=24.1.0",
    "cachetools>=6.1.0",
    "chonkie>=1.1.1",
    "en-core-web-sm",
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "magika>=0.5.1",
    "mistletoe>=1.4.0",
    "model2vec>=0.6.0",
    "mrpt>=2.0.2",
    "numpy<2.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "tensorflow-hub>=0.16.1",
    "textual>=5.1.0",
    "tiktoken>=0.9.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.9.0",
    "vectordb2>=0.1.9",
]

[project.optional-dependencies]
dev = [

]
tiktoken = [
    "chonkie>=1.1.1",
]
model2vec = [
    "chonkie>=1.1.1",
]
sentence-transformers = [
    "chonkie>=1.1.1",
]

[project.scripts]
textual-mcp = "textual_mcp.server:main"
textual-mcp-index = "scripts.index_documentation:main"

[tool.hatch.build]
include = ["src/textual_mcp"]

[tool.hatch.build.targets.wheel]
packages = ["src/textual_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "typings"

[[tool.mypy.overrides]]
module = "chonkie.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tokenizers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vecs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vectordb.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=textual_mcp --cov-report=term-missing"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
]
